fix(worker): cleanup and fix WorkerTest