@@ -1,92 +1,111 @@
 package io.kestra.worker;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.google.common.collect.ImmutableMap;
-import io.kestra.core.models.executions.*;
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.ExecutionKilled;
+import io.kestra.core.models.executions.ExecutionKilledExecution;
+import io.kestra.core.models.executions.LogEntry;
+import io.kestra.core.models.executions.TaskRun;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.property.Property;
 import io.kestra.core.models.tasks.ResolvedTask;
+import io.kestra.core.queues.BroadcastQueueInterface;
 import io.kestra.core.queues.DispatchQueueInterface;
+import io.kestra.core.queues.KeyedDispatchQueueInterface;
 import io.kestra.core.queues.QueueException;
-import io.kestra.core.runners.*;
-import io.kestra.core.serializers.JacksonMapper;
+import io.kestra.core.runners.RunContextFactory;
+import io.kestra.core.runners.Worker;
+import io.kestra.core.runners.WorkerJobEvent;
+import io.kestra.core.runners.WorkerTask;
+import io.kestra.core.runners.WorkerTaskResult;
+import io.kestra.core.utils.IdUtils;
+import io.kestra.core.utils.TestsUtils;
+import io.kestra.core.worker.Controller;
 import io.kestra.plugin.core.flow.Pause;
 import io.kestra.plugin.core.flow.Sleep;
 import io.kestra.plugin.core.flow.WorkingDirectory;
-import io.kestra.core.utils.Await;
-import io.kestra.core.utils.IdUtils;
-import io.kestra.core.utils.TestsUtils;
-import io.kestra.core.queues.BroadcastQueueInterface;
 import io.micronaut.context.ApplicationContext;
-import io.kestra.core.junit.annotations.KestraTest;
 import jakarta.inject.Inject;
-import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.concurrent.TimeoutException;
 
-import static io.kestra.core.utils.Rethrow.throwSupplier;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatCode;
+import static org.awaitility.Awaitility.await;
 
 @KestraTest(rebuildContext = true)
 class WorkerTest {
-    @Inject
-    ApplicationContext applicationContext;
 
     @Inject
-    DispatchQueueInterface<WorkerJobEvent> workerTaskQueue;
+    private ApplicationContext applicationContext;
 
     @Inject
-    DispatchQueueInterface<WorkerTaskResult> workerTaskResultQueue;
+    private KeyedDispatchQueueInterface<WorkerJobEvent> workerJobEventQueue;
 
     @Inject
-    BroadcastQueueInterface<ExecutionKilled> executionKilledQueue;
+    private DispatchQueueInterface<WorkerTaskResult> workerTaskResultQueue;
+
+    @Inject
+    private BroadcastQueueInterface<ExecutionKilled> executionKilledQueue;
 
     @Inject
     private DispatchQueueInterface<LogEntry> workerTaskLogQueue;
 
     @Inject
-    RunContextFactory runContextFactory;
+    private RunContextFactory runContextFactory;
 
-    @Test
-    void success() throws TimeoutException, QueueException {
-        Worker worker = applicationContext.createBean(Worker.class);
-        worker.start(8, null);
+    private Controller controller;
 
-        List<WorkerTaskResult> workerTaskResult = new ArrayList<>();
-        workerTaskResultQueue.addListener(workerTaskResult::add);
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask(1000), null));
+    @BeforeEach
+    void setUp() {
+        controller = applicationContext.createBean(Controller.class);
+        controller.start();
+    }
 
-        Await.until(
-            () -> !workerTaskResult.isEmpty() && workerTaskResult.getLast().getTaskRun().getState().isTerminated(),
-            Duration.ofMillis(100),
-            Duration.ofMinutes(1)
-        );
-        worker.close();
-        assertThat(workerTaskResult.getLast().getTaskRun().getState().getHistories().size()).isEqualTo(3);
+    @AfterEach
+    void tearDown() {
+        controller.close();
     }
 
     @Test
-    void failOnWorkerTaskWithFlowable() throws TimeoutException, QueueException, JsonProcessingException {
-        Worker worker = applicationContext.createBean(Worker.class);
-        worker.start(8, null);
+    void shouldSucceedWhenTaskIsExecuted() throws QueueException {
+        // Given
+        List<WorkerTaskResult> results = new ArrayList<>();
+        workerTaskResultQueue.addListener(results::add);
 
-        List<WorkerTaskResult> workerTaskResult = new ArrayList<>();
-        workerTaskResultQueue.addListener(workerTaskResult::add);
+        // When
+        try (Worker worker = applicationContext.createBean(Worker.class)) {
+            worker.start(1, null);
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(1)), null));
 
+            await()
+                .atMost(Duration.ofMinutes(1))
+                .pollInterval(Duration.ofMillis(100))
+                .until(() -> !results.isEmpty() && results.getLast().getTaskRun().getState().isTerminated());
+        }
+
+        // Then
+        assertThat(results.getLast().getTaskRun().getState().getHistories()).hasSize(3);
+    }
+
+    @Test
+    void shouldFailWhenWorkerReceivesFlowableTask() throws QueueException {
+        // Given
         Pause pause = Pause.builder()
             .type(Pause.class.getName())
             .delay(Property.ofValue(Duration.ofSeconds(1)))
             .id("unit-test")
             .build();
 
-        WorkingDirectory theWorkerTask = WorkingDirectory.builder()
+        WorkingDirectory flowableTask = WorkingDirectory.builder()
             .type(WorkingDirectory.class.getName())
             .id("worker-unit-test")
             .tasks(List.of(pause))
@@ -95,115 +114,123 @@ class WorkerTest {
         Flow flow = Flow.builder()
             .id(IdUtils.create())
             .namespace("io.kestra.unit-test")
-            .tasks(Collections.singletonList(theWorkerTask))
+            .tasks(List.of(flowableTask))
             .build();
 
-        Execution execution = TestsUtils.mockExecution(flow, ImmutableMap.of());
-
+        Execution execution = TestsUtils.mockExecution(flow, Map.of());
         ResolvedTask resolvedTask = ResolvedTask.of(pause);
-
         WorkerTask workerTask = WorkerTask.builder()
-            .runContext(runContextFactory.of(ImmutableMap.of("key", "value")))
-            .task(theWorkerTask)
+            .runContext(runContextFactory.of(Map.of("key", "value")))
+            .task(flowableTask)
             .taskRun(TaskRun.of(execution, resolvedTask))
             .build();
 
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask, null));
+        List<WorkerTaskResult> results = new ArrayList<>();
+        workerTaskResultQueue.addListener(results::add);
 
-        Await.until(
-            throwSupplier(() -> {
-                WorkerTaskResult taskResult = workerTaskResult.getLast();
-                return "WorkerTaskResult was " + (taskResult == null ? null : JacksonMapper.ofJson().writeValueAsString(taskResult));
-            }),
-            () -> !workerTaskResult.isEmpty() && workerTaskResult.getLast().getTaskRun().getState().isFailed(),
-            Duration.ofMillis(100),
-            Duration.ofMinutes(1)
-        );
-        worker.close();
-        assertThat(workerTaskResult.getLast().getTaskRun().getState().getHistories().size()).isEqualTo(3);
+        // When
+        try (Worker worker = applicationContext.createBean(Worker.class)) {
+            worker.start(1, null);
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask, null));
+
+            await()
+                .atMost(Duration.ofMinutes(1))
+                .pollInterval(Duration.ofMillis(100))
+                .until(() -> !results.isEmpty() && results.getLast().getTaskRun().getState().isFailed());
+        }
+
+        // Then
+        assertThat(results.getLast().getTaskRun().getState().getHistories()).hasSize(3);
     }
 
     @Test
-    void killed() throws InterruptedException, TimeoutException, QueueException {
+    void shouldKillTasksWhenExecutionKillEventReceived() throws InterruptedException, QueueException {
+        // Given
         List<LogEntry> logs = new CopyOnWriteArrayList<>();
         workerTaskLogQueue.addListener(logs::add);
 
-        Worker worker = applicationContext.createBean(Worker.class);
-        worker.start(8, null);
+        List<WorkerTaskResult> results = new CopyOnWriteArrayList<>();
+        workerTaskResultQueue.addListener(results::add);
 
-        List<WorkerTaskResult> workerTaskResult = new CopyOnWriteArrayList<>();
-        workerTaskResultQueue.addListener(workerTaskResult::add);
-        WorkerTask workerTask = workerTask(999000);
+        // we emit 4 tasks that will last 60 seconds, and one that will last 1 second.
+        // We will kill the 4 first ones, but not the last one.
+        String executionId = IdUtils.create();
 
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask, null));
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask, null));
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask, null));
-        workerTaskQueue.emit(WorkerJobEvent.of(workerTask, null));
-        WorkerTask notKilled = workerTask(2000);
-        workerTaskQueue.emit(WorkerJobEvent.of(notKilled, null));
+        try (Worker worker = applicationContext.createBean(Worker.class)) {
+            worker.start(16, null);
 
-        Thread.sleep(500);
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(60), executionId), null));
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(60), executionId), null));
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(60), executionId), null));
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(60), executionId), null));
+            workerJobEventQueue.emit(null, WorkerJobEvent.of(workerTask(Duration.ofSeconds(1)), null));
 
-        executionKilledQueue.emit(ExecutionKilledExecution.builder().executionId(workerTask.getTaskRun().getExecutionId()).build());
+            Thread.sleep(500);
 
-        Await.until(
-            () -> {
-                // copy the list to avoid concurrent modification exception if a WorkerTaskResult arrives in the queue
-                var copy = new ArrayList<>(workerTaskResult);
-                return copy.stream().filter(r -> r.getTaskRun().getState().isTerminated()).count() == 5;
-            },
-            Duration.ofMillis(100),
-            Duration.ofMinutes(1)
-        );
+            // When
+            ExecutionKilledExecution killedExecution = ExecutionKilledExecution.builder()
+                .executionId(executionId)
+                .state(ExecutionKilled.State.EXECUTED)
+                .build();
+            executionKilledQueue.emit(killedExecution);
 
-        WorkerTaskResult oneKilled = workerTaskResult.stream()
-            .filter(r -> r.getTaskRun().getState().getCurrent() == State.Type.KILLED)
-            .findFirst()
-            .orElseThrow();
-        assertThat(oneKilled.getTaskRun().getState().getHistories().size()).isEqualTo(3);
-        assertThat(oneKilled.getTaskRun().getState().getCurrent()).isEqualTo(State.Type.KILLED);
+            await()
+                .atMost(Duration.ofMinutes(1))
+                .pollInterval(Duration.ofMillis(100))
+                .until(() -> results.stream().filter(r -> r.getTaskRun().getState().isTerminated()).count() == 5);
 
-        WorkerTaskResult oneNotKilled = workerTaskResult.stream()
-            .filter(r -> r.getTaskRun().getState().getCurrent() == State.Type.SUCCESS)
-            .findFirst()
-            .orElseThrow();
-        assertThat(oneNotKilled.getTaskRun().getState().getHistories().size()).isEqualTo(3);
-        assertThat(oneNotKilled.getTaskRun().getState().getCurrent()).isEqualTo(State.Type.SUCCESS);
+            // Then
+            WorkerTaskResult oneKilled = results.stream()
+                .filter(r -> r.getTaskRun().getState().getCurrent() == State.Type.KILLED)
+                .findFirst()
+                .orElseThrow();
+            assertThat(oneKilled.getTaskRun().getState().getHistories()).hasSize(3);
 
-        // child process is stopped and we never received 3 logs
-        Thread.sleep(1000);
-        worker.close();
-        assertThat(logs.stream().filter(logEntry -> logEntry.getMessage().equals("3")).count()).isEqualTo(0L);
+            WorkerTaskResult oneNotKilled = results.stream()
+                .filter(r -> r.getTaskRun().getState().getCurrent() == State.Type.SUCCESS)
+                .findFirst()
+                .orElseThrow();
+            assertThat(oneNotKilled.getTaskRun().getState().getHistories()).hasSize(3);
+
+            // child process is stopped and we never received 3 logs
+            Thread.sleep(1000);
+            assertThat(logs.stream().filter(logEntry -> logEntry.getMessage().equals("3")).count()).isEqualTo(0L);
+        }
     }
 
     @Test
     void shouldCreateInstanceGivenApplicationContext() {
-        Assertions.assertDoesNotThrow(() -> {
+        assertThatCode(() -> {
             try (var worker = applicationContext.getBean(Worker.class)) {
                 // do nothing
             }
-        });
+        }).doesNotThrowAnyException();
     }
 
-    private WorkerTask workerTask(long sleepDuration) {
+    private WorkerTask workerTask(Duration duration) {
+        return workerTask(duration, IdUtils.create());
+    }
+
+    private WorkerTask workerTask(Duration duration, String executionId) {
         Sleep bash = Sleep.builder()
             .type(Sleep.class.getName())
             .id("unit-test")
-            .duration(Property.ofValue(Duration.ofMillis(sleepDuration)))
+            .duration(Property.ofValue(duration))
             .build();
 
         Flow flow = Flow.builder()
             .id(IdUtils.create())
             .namespace("io.kestra.unit-test")
-            .tasks(Collections.singletonList(bash))
+            .tasks(List.of(bash))
             .build();
 
-        Execution execution = TestsUtils.mockExecution(flow, ImmutableMap.of());
+        Execution execution = TestsUtils.mockExecution(flow, Map.of());
+        execution = execution.toBuilder().id(executionId).build();
 
         ResolvedTask resolvedTask = ResolvedTask.of(bash);
 
         return WorkerTask.builder()
-            .runContext(runContextFactory.of(ImmutableMap.of("key", "value")))
+            .runContext(runContextFactory.of(Map.of("key", "value")))
             .task(bash)
             .taskRun(TaskRun.of(execution, resolvedTask))
             .build();
